--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <style>
 body {
+	text-align: center;
 	background-image: url('bg.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
