--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@ body {
 </head>
 <body>
 <h1 style="font-family:verdana">Nuestro Menu Regular</h1>
-<img src="menu.png" alt="menu">
+<img src="menu.png" alt="menu" class="center">
