center image test

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
 </head>
 <style>
 body {
-	text-align: center;
+	
+	text-align: center;	
 	background-image: url('bg.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
 }
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 </style>
 </head>
 <body>
-<h1 style="font-family:verdana">Nuestro Menu Regular</h1>
-<img src="menu.png" alt="menu" class="center">
+	<h1 style="font-family:verdana">Nuestro Menu Regular</h1>
+	<img src="menu.png" alt="menu" class="center">
+</body>
