--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@ img {
 </head>
 <body>
 	<h1 style="font-family:verdana">Nuestro Menu Regular</h1>
-	<img src="menu.png" alt="menu" class="center">
+	<img src="menu.png" alt="menu" style="width:95%;">
 </body>
