--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@ img {
 </head>
 <body>
 	<h1 style="font-family:verdana">Nuestro Menu Regular</h1>
-	<img src="menu.png" alt="menu" style="width:95%;">
+	<img src="menu.jpg" alt="menu" style="width:95%;">
 	<h2 style="font-family:verdana">Menu de Brunch Coming Soon!</h2>
 </body>
