--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ img {
 <body>
 	<h1 style="font-family:verdana">Menu Regular (Miércoles a Domingo desde las 3:00pm)</h1>
 	<img src="menu.jpg" alt="menu" style="width:95%;">
+	<h1 style="font-family:verdana">Menu Parte 2</h1>
+	<img src="menupart2.jpg" alt="menu 2" style="width:95%;">
 	<h2 style="font-family:verdana">Menu Ultima Media Hora</h2>
 	<img src="menulastminute.jpg" alt="menu last minute" style="width:95%;">
-	<h1 style="font-family:verdana">Menu de Brunch (Domingos 10:00am - 3:00pm)</h1>
-	<img src="menubrunch.jpg" alt="menu brunch" style="width:95%;">
 	<h2 style="font-family:verdana"> </h2>
 </body>
