--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
       class="readable-mailing-address">123 Heirloom ST Anytown CA 01234</span>
     <span style="display: block; padding: 4px 0 8px 0; font-family: Roboto,RobotoDraft,Helvetica, Arial, sans-serif !important; font-size: 14px; line-height: 19px; font-weight: normal !important; color: #403F5D;">Powered by <a
                 href="https://www.postermywall.com/index.php?utm_source=email&utm_content=powered_by_pmw_ad&utm_campaign=useremailcampaigns" style="font-weight: bold !important; color: #3fbce7; text-decoration: none;">PosterMyWall</a></span>
-				
+				<p style="text-align:center;">
 				<img src="cocktail1.jpg" alt="cocktail1" width="647" height="1000" </img> <br>
-				<p>
 				</p>
+				<p> </p>
+				<p style="text-align:center;">
 				<img src="cocktail2.jpg" alt="cocktail2" width="647" height="1000" </img> <br>
+				</p>
 				
     </body>
 </html>
