--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
  	<img src="title.png" alt="title" style="width:95%;">
 
  	<h1 style="font-family:verdana"></h1>
- 	<img src="page1.png" alt="menu1" style="width:95%;">
+ 	<img src="page1.jpg" alt="menu1" style="width:95%;">
 
   <h1 style="font-family:verdana"></h1>
- 	<img src="page2.png" alt="menu2" style="width:95%;">
+ 	<img src="page2.jpg" alt="menu2" style="width:95%;">
 
   <h1 style="font-family:verdana"></h1>
- 	<img src="page3.png" alt="menu3" style="width:95%;">
+ 	<img src="page3.jpg" alt="menu3" style="width:95%;">
 
   <h1 style="font-family:verdana"></h1>
- 	<img src="page4.png" alt="menu4" style="width:95%;">
+ 	<img src="page4.jpg" alt="menu4" style="width:95%;">
 
  </body>
